// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Uploader Basic 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
</div>
`;

exports[`Storyshots Uploader Limited 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept="image/png,image/jpeg"
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <span>
      
      (max size 0o)
    
    </span>
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
</div>
`;

exports[`Storyshots Uploader Manual Trigger 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
</div>
`;

exports[`Storyshots Uploader With Existing Value 1`] = `
<div>
  <div
    class="dropzone"
  >
    <input
      accept=""
      multiple="multiple"
      type="file"
    />
    
    Drag and drop one or more files here or
    
    <button
      class="btn btn-primary"
      type="button"
    >
      <span
        class="glyphicon glyphicon-plus"
      />
      
      click to add a file
    
    </button>
     
    <!---->
  </div>
   
  <ul
    class="media-list"
  />
   
  <!---->
   
  <input
    name="media_0"
    type="hidden"
    value="12e68184-5cba-4b27-9988-609a6cc3be63"
  />
</div>
`;
